@@ -7,29 +7,27 @@ package org.wildfly.clustering.web.undertow.session;
 import static org.junit.Assert.assertSame;
 import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.ArgumentMatchers.same;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.Consumer;
 
 import io.undertow.server.session.Session;
 import io.undertow.server.session.SessionListener;
 import io.undertow.server.session.SessionListeners;
 import io.undertow.servlet.api.Deployment;
+import io.undertow.servlet.spec.ServletContextImpl;
+
 import org.junit.Test;
 import org.mockito.ArgumentCaptor;
-import org.wildfly.clustering.ee.Batch;
-import org.wildfly.clustering.ee.Batcher;
-import org.wildfly.clustering.ee.Recordable;
-import org.wildfly.clustering.web.session.ImmutableSession;
-import org.wildfly.clustering.web.session.ImmutableSessionAttributes;
-import org.wildfly.clustering.web.session.ImmutableSessionMetaData;
-import org.wildfly.clustering.web.session.SessionManager;
+import org.wildfly.clustering.session.ImmutableSession;
+import org.wildfly.clustering.session.ImmutableSessionMetaData;
+import org.wildfly.clustering.session.SessionManager;
 
 public class UndertowSessionExpirationListenerTestCase {
 
@@ -37,12 +35,11 @@ public class UndertowSessionExpirationListenerTestCase {
     public void sessionExpired() {
         Deployment deployment = mock(Deployment.class);
         UndertowSessionManager manager = mock(UndertowSessionManager.class);
-        SessionManager<Map<String, Object>, Batch> delegateManager = mock(SessionManager.class);
-        Batcher<Batch> batcher = mock(Batcher.class);
-        Batch batch = mock(Batch.class);
+        SessionManager<Map<String, Object>> delegateManager = mock(SessionManager.class);
         SessionListener listener = mock(SessionListener.class);
+        ServletContextImpl context = mock(ServletContextImpl.class);
         ImmutableSession session = mock(ImmutableSession.class);
-        ImmutableSessionAttributes attributes = mock(ImmutableSessionAttributes.class);
+        Map<String, Object> attributes = mock(Map.class);
         ImmutableSessionMetaData metaData = mock(ImmutableSessionMetaData.class);
         ArgumentCaptor<Session> capturedSession = ArgumentCaptor.forClass(Session.class);
         Recordable<ImmutableSessionMetaData> recorder = mock(Recordable.class);
@@ -52,25 +49,22 @@ public class UndertowSessionExpirationListenerTestCase {
         listeners.addSessionListener(listener);
 
         Consumer<ImmutableSession> expirationListener = new UndertowSessionExpirationListener(deployment, listeners, recorder);
-
-        when(deployment.getSessionManager()).thenReturn(manager);
-        when(manager.getSessionManager()).thenReturn(delegateManager);
-        when(delegateManager.getBatcher()).thenReturn(batcher);
-        when(batcher.suspendBatch()).thenReturn(batch);
-        when(session.getId()).thenReturn(expectedSessionId);
-        when(session.getAttributes()).thenReturn(attributes);
-        when(attributes.getAttributeNames()).thenReturn(Collections.emptySet());
-        when(session.getMetaData()).thenReturn(metaData);
-        when(metaData.getCreationTime()).thenReturn(Instant.now());
-        when(metaData.getLastAccessStartTime()).thenReturn(Instant.now());
-        when(metaData.getTimeout()).thenReturn(Duration.ZERO);
+        doReturn(context).when(deployment).getServletContext();
+        doReturn(Thread.currentThread().getContextClassLoader()).when(context).getClassLoader();
+        doReturn(manager).when(deployment).getSessionManager();
+        doReturn(delegateManager).when(manager).getSessionManager();
+        doReturn(expectedSessionId).when(session).getId();
+        doReturn(attributes).when(session).getAttributes();
+        doReturn(Set.of()).when(attributes).entrySet();
+        doReturn(metaData).when(session).getMetaData();
+        doReturn(Instant.now()).when(metaData).getCreationTime();
+        doReturn(Instant.now()).when(metaData).getLastAccessStartTime();
+        doReturn(Duration.ZERO).when(metaData).getTimeout();
 
         expirationListener.accept(session);
 
         verify(recorder).record(metaData);
-        verify(batcher).suspendBatch();
         verify(listener).sessionDestroyed(capturedSession.capture(), isNull(), same(SessionListener.SessionDestroyedReason.TIMEOUT));
-        verify(batcher).resumeBatch(batch);
 
         assertSame(expectedSessionId, capturedSession.getValue().getId());
         assertSame(manager, capturedSession.getValue().getSessionManager());
